[package]
name = "qt-cb-sys"
version = "0.1.0"
edition = "2021"
description = "Use callbacks in rust-qt!"
repository = "https://github.com/MoAlyousef/qt-cb"
documentation = "https://docs.rs/qt-cb-sys"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "../README.md"
license = "MIT"

[build-dependencies]
cc = {version = "1", features = ["parallel"] }